# garmin-workouts-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/garmin_workouts_mcp/: payloads.py  server.py
tests/: test_metadata.py  test_payloads.py  test_server_runtime.py
